k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # port 指的是Service的端口
      port: 6379
      # targetPort 指的是POD的端口
      targetPort: 6379
      # nodePort 指的是Node本机的端口
      nodePort: 30002
  type: NodePort
